--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,9 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="primary_color">#D60000</color>
+    <color name="secondary_color">#f29303</color>
+    <color name="tertiary_color">#FFE1F4</color>
+
+
 </resources>
