--- a/app/src/main/res/layout/activity_startup.xml
+++ b/app/src/main/res/layout/activity_startup.xml
@@ -5,67 +5,72 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:layout_gravity="center"
-    android:background="@drawable/background"
+    android:background="@drawable/background_canva"
     >
+
+
+    <ImageView
+        android:id="@+id/readify_logo"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_marginTop="140dp"
+        android:contentDescription="@string/logo"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/title_startup"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/ic_readify_logo"
+        app:layout_constraintHorizontal_chainStyle="packed"
+
+        />
 
     <TextView
         android:id="@+id/title_startup"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/playfair_display"
+        android:layout_height="100dp"
+        android:layout_marginTop="140dp"
         android:text="@string/app_name"
-        android:textColor="@color/secondary_color"
-        android:textStyle="bold|italic"
+        android:textColor="@color/primary_color"
         android:textSize="50sp"
-        android:shadowColor="@color/black"
-        android:shadowRadius="40"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/readify_logo"
-        android:layout_marginBottom="50sp"
-        />
-
-    <ImageView
-        android:id="@+id/readify_logo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:contentDescription="@string/logo"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        android:textStyle="bold|italic"
+        android:gravity="center"
+        app:layout_constraintStart_toEndOf="@+id/readify_logo"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:srcCompat="@drawable/ic_readify_logo"
-        android:layout_marginBottom="50sp"
-        android:shadowColor="@color/black"
-        android:shadowRadius="40"
+        app:layout_constraintEnd_toEndOf="parent"
         />
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:gravity="center"
+        android:layout_marginTop="90dp"
+        app:layout_constraintTop_toBottomOf="@+id/readify_logo"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/readify_logo"
-        android:layout_marginTop="40sp"
-        android:textColor="@color/white"
-        android:text="@string/subtitle_topic_preferences"
-    />
+        android:layout_marginHorizontal="10dp"
+        android:textColor="@color/black"
+        android:text="@string/textview_slogan"
+        android:textSize="48sp"
+        android:textStyle="italic"
+        android:background="@drawable/blur_bottom_to_top"
+        />
+
 
     <Button
         android:id="@+id/button_startup"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|center"
-        android:layout_marginBottom="30sp"
+        android:layout_marginBottom="60dp"
         android:text="@string/button_getting_started"
-        android:textSize="18sp"
+        android:textSize="24sp"
         android:paddingHorizontal="50sp"
-        android:paddingVertical="10sp"
-        android:backgroundTint="@color/primary_color"
+        android:paddingVertical="15sp"
+        android:backgroundTint="@color/golden_yellow"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
+        android:textColor="@color/black"
+
         />
 
 
