--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,5 +8,7 @@
     <color name="tertiary_color">#008080</color>
     <color name="golden_yellow">#FFC000</color>
     <color name="orange">#FFA500</color>
+    <color name="google_login_button">#eceff1</color>
+    <color name="google_login_text">#616161</color>
 
 </resources>
