--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -2,22 +2,22 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/navigation_bar_home"
+        android:id="@+id/homeFragment"
         android:enabled="true"
         android:icon="@drawable/ic_baseline_home_24"
         android:title="@string/navigation_bar_item_home" />
     <item
-        android:id="@+id/navigation_bar_search"
+        android:id="@+id/searchFragment"
         android:enabled="true"
         android:icon="@drawable/ic_baseline_search_24"
         android:title="@string/navigation_bar_item_search"/>
     <item
-        android:id="@+id/navigation_bar_saved"
+        android:id="@+id/favoritesFragment"
         android:enabled="true"
         android:icon="@drawable/ic_baseline_saved_24"
         android:title="@string/navigation_bar_item_saved"/>
     <item
-        android:id="@+id/navigation_bar_profile"
+        android:id="@+id/profileFragment"
         android:enabled="true"
         android:icon="@drawable/ic_baseline_profile_24"
         android:title="@string/navigation_bar_item_profile"/>
