--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -50,7 +50,7 @@
             android:layout_width="150dp"
             android:layout_height="150dp"
             android:layout_marginTop="8dp"
-            android:src="@drawable/personal_area_user_logo"
+            android:src="@drawable/ic_profile_image"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.513"
             app:layout_constraintStart_toStartOf="parent"
@@ -99,7 +99,7 @@
                     android:layout_width="70dp"
                     android:layout_height="70dp"
                     android:layout_marginEnd="16dp"
-                    android:src="@drawable/arrow_right"
+                    android:src="@drawable/ic_arrow"
                     app:layout_constraintBottom_toBottomOf="@+id/button2"
                     app:layout_constraintEnd_toEndOf="@+id/button2"
                     app:layout_constraintTop_toTopOf="@+id/button2" />
@@ -127,7 +127,7 @@
                     android:layout_width="70dp"
                     android:layout_height="70dp"
                     android:layout_marginEnd="16dp"
-                    android:src="@drawable/arrow_right"
+                    android:src="@drawable/ic_arrow"
                     app:layout_constraintBottom_toBottomOf="@+id/button3"
                     app:layout_constraintEnd_toEndOf="@+id/button3"
                     app:layout_constraintTop_toTopOf="@+id/button3" />
@@ -155,7 +155,7 @@
                     android:layout_width="70dp"
                     android:layout_height="70dp"
                     android:layout_marginEnd="16dp"
-                    android:src="@drawable/arrow_right"
+                    android:src="@drawable/ic_arrow"
                     app:layout_constraintBottom_toBottomOf="@+id/button4"
                     app:layout_constraintEnd_toEndOf="@+id/button4"
                     app:layout_constraintTop_toTopOf="@+id/button4" />
