--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -14,95 +14,85 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:padding="20dp">
-
-        <Button
-            android:id="@+id/button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="menù"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+        android:padding="20sp" >
 
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/personal_area_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="My Library"
-            android:textSize="35dp"
+            android:text="@string/pa_title"
+            android:textSize="35sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <View
-            android:id="@+id/view"
             android:layout_width="match_parent"
-            android:layout_height="2dp"
+            android:layout_height="2sp"
             android:layout_marginTop="24dp"
             android:background="@color/google_login_text"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView" />
+            app:layout_constraintTop_toBottomOf="@+id/personal_area_title" />
 
         <ImageView
-            android:id="@+id/imageView"
-            android:layout_width="150dp"
-            android:layout_height="150dp"
-            android:layout_marginTop="8dp"
+            android:id="@+id/profile_image"
+            android:layout_width="150sp"
+            android:layout_height="150sp"
+            android:layout_marginTop="8sp"
             android:src="@drawable/ic_profile_image"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.513"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView" />
+            app:layout_constraintTop_toBottomOf="@+id/personal_area_title"
+            android:contentDescription="@string/pa_description_photo"/>
 
         <TextView
-            android:id="@+id/textView2"
+            android:id="@+id/textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="8sp"
             android:text="Napoleone Bonaparte"
-            android:textSize="30dp"
+            android:textSize="30sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imageView" />
+            app:layout_constraintTop_toBottomOf="@+id/profile_image" />
 
         <LinearLayout
             android:id="@+id/linearLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="80dp"
+            android:layout_marginTop="80sp"
             android:orientation="vertical"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.6"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imageView">
+            app:layout_constraintTop_toBottomOf="@+id/profile_image">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
                 <Button
-                    android:id="@+id/button2"
+                    android:id="@+id/collections"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:backgroundTint="@color/light_purple"
-                    android:gravity="left"
-                    android:paddingTop="10dp"
-                    android:paddingBottom="10dp"
-                    android:text="Collections"
-                    android:textSize="30dp"
+                    android:gravity="start"
+                    android:text="@string/pa_collections"
+                    android:textSize="30sp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <ImageView
-                    android:layout_width="70dp"
-                    android:layout_height="70dp"
-                    android:layout_marginEnd="16dp"
-                    android:src="@drawable/ic_arrow"
-                    app:layout_constraintBottom_toBottomOf="@+id/button2"
-                    app:layout_constraintEnd_toEndOf="@+id/button2"
-                    app:layout_constraintTop_toTopOf="@+id/button2" />
+                    android:layout_width="30sp"
+                    android:layout_height="30sp"
+                    android:layout_marginEnd="32dp"
+                    android:src="@drawable/arrow_right_icon"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="@+id/collections"
+                    app:layout_constraintTop_toTopOf="@+id/collections"
+                    app:tint="@color/white"
+                    android:contentDescription="@string/pa_description_arrow"/>
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -111,26 +101,27 @@
                 android:layout_height="wrap_content">
 
                 <Button
-                    android:id="@+id/button3"
+                    android:id="@+id/statistics"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:backgroundTint="@color/light_purple"
-                    android:gravity="left"
-                    android:paddingTop="10dp"
-                    android:paddingBottom="10dp"
-                    android:text="Statistics"
-                    android:textSize="30dp"
+                    android:gravity="start"
+                    
+                    android:text="@string/pa_stats"
+                    android:textSize="30sp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <ImageView
-                    android:layout_width="70dp"
-                    android:layout_height="70dp"
-                    android:layout_marginEnd="16dp"
-                    android:src="@drawable/ic_arrow"
-                    app:layout_constraintBottom_toBottomOf="@+id/button3"
-                    app:layout_constraintEnd_toEndOf="@+id/button3"
-                    app:layout_constraintTop_toTopOf="@+id/button3" />
+                    android:layout_width="30sp"
+                    android:layout_height="30sp"
+                    android:layout_marginEnd="32dp"
+                    android:src="@drawable/arrow_right_icon"
+                    app:layout_constraintBottom_toBottomOf="@+id/statistics"
+                    app:layout_constraintEnd_toEndOf="@+id/statistics"
+                    app:layout_constraintTop_toTopOf="@+id/statistics"
+                    app:tint="@color/white"
+                    android:contentDescription="@string/pa_description_arrow"/>
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -139,30 +130,75 @@
                 android:layout_height="wrap_content">
 
                 <Button
-                    android:id="@+id/button4"
+                    android:id="@+id/notes"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:backgroundTint="@color/light_purple"
-                    android:gravity="left"
-                    android:paddingTop="10dp"
-                    android:paddingBottom="10dp"
-                    android:text="Notes"
-                    android:textSize="30dp"
+                    android:gravity="start"
+                    
+                    android:text="@string/pa_notes"
+                    android:textSize="30sp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <ImageView
-                    android:layout_width="70dp"
-                    android:layout_height="70dp"
-                    android:layout_marginEnd="16dp"
-                    android:src="@drawable/ic_arrow"
-                    app:layout_constraintBottom_toBottomOf="@+id/button4"
-                    app:layout_constraintEnd_toEndOf="@+id/button4"
-                    app:layout_constraintTop_toTopOf="@+id/button4" />
+                    android:layout_width="30sp"
+                    android:layout_height="30sp"
+                    android:layout_marginEnd="32dp"
+                    android:src="@drawable/arrow_right_icon"
+                    app:layout_constraintBottom_toBottomOf="@+id/notes"
+                    app:layout_constraintEnd_toEndOf="@+id/notes"
+                    app:layout_constraintTop_toTopOf="@+id/notes"
+                    app:tint="@color/white"
+                    android:contentDescription="@string/pa_description_arrow"/>
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
         </LinearLayout>
+
+        <View
+            android:id="@+id/separator2"
+            android:layout_width="match_parent"
+            android:layout_height="2sp"
+            android:layout_marginTop="16dp"
+            android:background="@color/google_login_text"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/separator2">
+
+            <Button
+                android:id="@+id/settings"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:backgroundTint="@color/light_purple"
+                android:gravity="start"
+                android:text="@string/pa_settings"
+                android:textSize="30sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="1.0"
+                tools:layout_editor_absoluteX="0dp" />
+
+            <ImageView
+                android:layout_width="30sp"
+                android:layout_height="30sp"
+                android:layout_marginEnd="32dp"
+                android:src="@drawable/arrow_right_icon"
+                app:layout_constraintBottom_toBottomOf="@+id/settings"
+                app:layout_constraintEnd_toEndOf="@+id/settings"
+                app:layout_constraintTop_toTopOf="@+id/settings"
+                app:tint="@color/white"
+                android:contentDescription="@string/pa_description_arrow"/>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
