--- a/app/src/main/res/navigation/home_navigation_graph.xml
+++ b/app/src/main/res/navigation/home_navigation_graph.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<navigation xmlns:android="http://schemas.android.com/apk/res/android"
+<navigation
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/home_navigation_graph"
@@ -9,25 +10,60 @@
         android:id="@+id/homeFragment"
         android:name="it.unimib.readify.ui.main.HomeFragment"
         android:label="fragment_home"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_home" >
+        <action
+            android:id="@+id/action_homeFragment_to_bookDetailsFragment"
+            app:destination="@id/bookDetailsFragment" />
+    </fragment>
 
     <fragment
         android:id="@+id/searchFragment"
         android:name="it.unimib.readify.ui.main.SearchFragment"
         android:label="fragment_search"
-        tools:layout="@layout/fragment_search" />
+        tools:layout="@layout/fragment_search" >
+        <action
+            android:id="@+id/action_searchFragment_to_bookDetailsFragment"
+            app:destination="@id/bookDetailsFragment" />
+        <action
+            android:id="@+id/action_searchFragment_to_filter_bottomsheet"
+            app:destination="@id/filter_bottomsheet" />
+
+
+    </fragment>
+
+    <dialog
+        android:id="@+id/filter_bottomsheet"
+        android:name="it.unimib.readify.ui.main.FilterBottomSheet"
+        android:label="dialog_filter_bottomsheet"
+        tools:layout="@layout/bottom_search_filter">
+
+        <!-- TODO forse argument necessario, da vedere -->
+    </dialog>
+
 
     <fragment
         android:id="@+id/favoritesFragment"
         android:name="it.unimib.readify.ui.main.FavoritesFragment"
         android:label="fragment_favorites"
-        tools:layout="@layout/fragment_favorites" />
+        tools:layout="@layout/fragment_favorites" >
+        <action
+            android:id="@+id/action_favoritesFragment_to_bookDetailsFragment"
+            app:destination="@id/bookDetailsFragment" />
+    </fragment>
 
     <fragment
         android:id="@+id/profileFragment"
         android:name="it.unimib.readify.ui.main.ProfileFragment"
         android:label="fragment_profile"
         tools:layout="@layout/fragment_profile" />
+
+
+    <fragment
+        android:id="@+id/bookDetailsFragment"
+        android:name="it.unimib.readify.ui.main.BookDetailsFragment"
+        android:label="fragment_book_details"
+        tools:layout="@layout/fragment_book_details" />
+
 
     <include app:graph="@navigation/login_navigation_graph" />
 
