--- a/app/src/main/res/layout/bottom_search_filter.xml
+++ b/app/src/main/res/layout/bottom_search_filter.xml
@@ -6,7 +6,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/bottomsheet_parent"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
+    >
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/bottomsheet"
@@ -15,15 +17,16 @@
         android:layout_height="wrap_content"
         android:paddingHorizontal="24dp"
         android:paddingBottom="16dp"
-        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
+        >
 
         <com.google.android.material.bottomsheet.BottomSheetDragHandleView
             android:id="@+id/bottomsheet_drag_handler"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            />
 
         <TextView
             android:id="@+id/bottom_sheet_title"
