--- a/app/src/main/res/navigation/login_navigation_graph.xml
+++ b/app/src/main/res/navigation/login_navigation_graph.xml
@@ -13,6 +13,9 @@
         <action
             android:id="@+id/action_loginFragment_to_homeActivity"
             app:destination="@id/homeActivity" />
+        <action
+            android:id="@+id/action_loginFragment_to_registerFragment"
+            app:destination="@id/registerFragment" />
     </fragment>
     <activity
         android:id="@+id/homeActivity"
@@ -20,6 +23,15 @@
         android:label="HomeActivity"
         tools:layout="@layout/activity_home"
         />
+    <fragment
+        android:id="@+id/registerFragment"
+        android:name="it.unimib.readify.ui.startup.RegisterFragment"
+        android:label="RegisterFragment"
+        tools:layout="@layout/fragment_register">
+        <action
+            android:id="@+id/action_registerFragment_to_homeActivity"
+            app:destination="@id/homeActivity" />
+    </fragment>
 
 
 </navigation>
