--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,16 +1,78 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
     tools:context=".ui.main.HomeFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+
+    <!--
+            style="@style/TextAppearance.Material3.TitleLarge"
+            style="@style/TextAppearance.Material3.DisplayLarge"
+            style="@style/TextAppearance.Material3.HeadlineLarge"
+    -->
+    <com.google.android.material.textview.MaterialTextView
+        android:id="@+id/textview_home_title"
+        style="@style/TextAppearance.Material3.DisplayMedium"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:text="HOME" />
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:text="@string/placeholder_home_welcome"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <com.google.android.material.divider.MaterialDivider
+        android:id="@+id/divider_home_fragment_1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        style="@style/Widget.Material3.MaterialDivider.Heavy"
+        android:layout_marginTop="10dp"
+        app:layout_constraintTop_toBottomOf="@id/textview_home_title"
+        app:layout_constraintStart_toStartOf="parent"
+
+        />
+
+
+    <com.google.android.material.textview.MaterialTextView
+        android:id="@+id/textview_home_trending"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        style="@style/TextAppearance.Material3.LabelLarge"
+        android:text="@string/textview_trending_books"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/divider_home_fragment_1"
+        android:layout_marginHorizontal="8dp"
+        android:layout_marginTop="10dp"
+        android:textSize="18sp"
+        />
+
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/trending_container"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="16dp"
+            android:layout_marginHorizontal="12dp"
+            android:orientation="horizontal"
+            app:layout_constraintTop_toBottomOf="@id/textview_home_trending"
+            tools:listitem="@layout/book_home_item"
+            tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            >
+
+        </androidx.recyclerview.widget.RecyclerView>
+
+
+
+
+
+
+
+
 
     <!-- TODO da rimuovere -->
     <Button
@@ -20,6 +82,9 @@
         android:text="PROVA"
         android:layout_gravity="center"
         android:layout_marginTop="40dp"
-        />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent" />
 
-</FrameLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
