--- a/app/src/main/res/drawable/ic_readify_logo_colored.xml
+++ b/app/src/main/res/drawable/ic_readify_logo_colored.xml
@@ -5,6 +5,6 @@
     android:width="150dp"
     xmlns:android="http://schemas.android.com/apk/res/android">
     <path
-        android:fillColor="@color/white"
+        android:fillColor="@color/black"
         android:pathData="M311,116c-1,-10 -1,-28 8,-34h1c7,-3 13,-6 8,-11L214,37 30,62S8,65 10,98c1,18 7,27 12,31l-15,5c-5,5 1,8 9,11 9,6 9,23 8,34 -34,9 -22,12 -22,12l8,2c-6,5 -11,14 -10,31 2,33 19,35 19,35l121,39 183,-44s12,-3 -22,-13c-1,-10 -2,-27 8,-33v-1c8,-2 13,-6 9,-10l-8,-3c6,-3 14,-11 15,-33 1,-15 -3,-24 -8,-29l16,-3s12,-4 -22,-13zM159,115 L189,109 293,88 308,85c-5,9 -4,21 -4,29l1,5 -17,4 -131,32 2,-40zM27,147l15,4 100,20 8,2 27,5 1,40 -135,-33 -13,-4 1,-4c0,-8 1,-21 -4,-30zM21,97c0,-9 1,-15 4,-19 2,-2 5,-2 6,-2h2l79,26 40,13 -1,40 -112,-31 -6,-2c-1,0 -12,-1 -12,-25zM141,281L23,248c-1,0 -12,-1 -12,-26 -1,-8 1,-15 4,-18 2,-2 4,-2 6,-2h2l119,39 -1,40zM294,239 L295,244 147,281 148,241 180,234 185,236 202,230 283,213 298,210c-5,9 -5,22 -4,29zM302,185 L290,188 184,218 183,178 218,166 302,139s5,-1 8,2 5,10 4,19c0,24 -11,25 -12,25z"/>
 </vector>
