--- a/app/src/main/res/layout/activity_startup.xml
+++ b/app/src/main/res/layout/activity_startup.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="@drawable/background_canva"
+    android:background="@drawable/mobile_gradient_backgrounds_intro"
     >
 
 
@@ -18,7 +18,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/title_startup"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_readify_logo"
+        app:srcCompat="@drawable/ic_readify_logo_colored"
         app:layout_constraintHorizontal_chainStyle="packed"
 
         />
@@ -29,7 +29,7 @@
         android:layout_height="100dp"
         android:layout_marginTop="140dp"
         android:text="@string/app_name"
-        android:textColor="@color/primary_color"
+        android:textColor="@color/login_blue"
         android:textSize="50sp"
         android:textStyle="bold|italic"
         android:gravity="center"
@@ -62,18 +62,19 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|center"
         android:layout_marginBottom="60dp"
-        android:text="@string/button_getting_started"
-        android:textSize="24sp"
+        android:backgroundTint="@color/login_blue"
         android:paddingHorizontal="50sp"
         android:paddingVertical="15sp"
-        android:backgroundTint="@color/golden_yellow"
-        app:layout_constraintTop_toBottomOf="@+id/textview_slogan"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        android:text="@string/button_getting_started"
+        android:textColor="@color/white"
+        android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:textColor="@color/black"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
 
-        />
+        app:layout_constraintTop_toBottomOf="@+id/textview_slogan"
+        app:layout_constraintVertical_bias="0.751" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
