--- a/app/src/main/res/layout/bottom_search_filter.xml
+++ b/app/src/main/res/layout/bottom_search_filter.xml
@@ -169,6 +169,7 @@
         <com.google.android.material.button.MaterialButton
             android:id="@+id/button_apply"
             style="@style/Widget.Material3.Button"
+            android:backgroundTint="@color/login_blue"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
