--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -5,6 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/mobile_gradient_backgrounds_2"
     tools:context=".ui.startup.WelcomeActivity">
 
     <androidx.constraintlayout.widget.Guideline
@@ -12,7 +13,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_begin="21dp" />
+        app:layout_constraintGuide_end="395dp" />
 
 
 
@@ -26,7 +27,8 @@
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_readify_logo" />
+        app:srcCompat="@drawable/ic_readify_logo"
+        />
 
     <TextView
         android:id="@+id/textview_login"
@@ -35,7 +37,7 @@
         android:layout_marginStart="160dp"
         android:layout_marginTop="16dp"
         android:text="@string/login"
-        android:textColor="?android:textColorPrimary"
+        android:textColor="@color/white"
         android:textSize="34sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
@@ -47,18 +49,21 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
         android:layout_marginEnd="24dp"
-
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/left_guideline"
         app:layout_constraintTop_toBottomOf="@+id/textview_login"
-        app:startIconDrawable="@drawable/ic_baseline_email_24"
         app:endIconMode="clear_text"
+        android:textColorHint="@color/white"
         app:errorEnabled="true">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/text_input_edit_text_email"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@drawable/custom_textbox"
+            android:drawableStart="@drawable/ic_baseline_email_24"
+            android:drawableTint="@color/white"
+            android:drawablePadding="20dp"
             android:hint="@string/email"
             android:inputType="textEmailAddress" />
     </com.google.android.material.textfield.TextInputLayout>
@@ -73,13 +78,17 @@
         app:layout_constraintStart_toStartOf="@+id/left_guideline"
         app:layout_constraintTop_toBottomOf="@+id/text_input_layout_email"
         app:passwordToggleEnabled="true"
-        app:startIconDrawable="@drawable/ic_baseline_vpn_key_24"
+        android:textColorHint="@color/white"
         app:errorEnabled="true">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/text_input_edit_text_password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@drawable/custom_textbox"
+            android:drawableStart="@drawable/ic_baseline_vpn_key_24"
+            android:drawablePadding="20dp"
+            android:drawableTint="@color/white"
             android:hint="@string/password"
             android:inputType="textPassword" />
     </com.google.android.material.textfield.TextInputLayout>
@@ -91,7 +100,7 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="24dp"
-        android:backgroundTint="@color/golden_yellow"
+        android:backgroundTint="@color/login_blue"
         android:text="@string/login"
         android:textColor="@color/white"
         android:textSize="14sp"
@@ -106,6 +115,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="136dp"
+        android:textColor="@color/white"
         android:text="@string/forgot_password"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -139,6 +149,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         android:text="@string/new_account"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/button_register"
         app:layout_constraintHorizontal_chainStyle="packed"
@@ -151,6 +162,7 @@
         style="@style/Widget.Material3.Button.TextButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textColor="@color/white"
         android:text="@string/register"
         android:textSize="14sp"
         app:layout_constraintBaseline_toBaselineOf="@+id/textview_new_account"
