added few icons refactored name of ViewModelFactory changed ViewModel creation in ViewModelFactory added dynamic behavior of CollectionFragment (on going) added navigation behavior on ProfileFragment added some strings resources

--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -8,7 +8,8 @@
     android:layout_height="match_parent"
     android:fillViewport="true"
     tools:context=".ui.main.ProfileFragment"
-    android:layout_marginBottom="100dp">
+    android:layout_marginBottom="100dp"
+    app:navGraph="@navigation/home_navigation_graph">
 
     <!-- TODO: Update profile fragment -->
     <LinearLayout
