added dynamic data from Firebase (on going) added few trivial functionalities

--- a/app/src/main/res/navigation/home_navigation_graph.xml
+++ b/app/src/main/res/navigation/home_navigation_graph.xml
@@ -72,6 +72,10 @@
             android:id="@+id/action_collectionFragment_to_profileFragment"
             app:destination=
                 "@+id/profileFragment"/>
+        <action
+            android:id="@+id/action_collectionFragment_to_bookDetailsFragment"
+            app:destination=
+                "@+id/bookDetailsFragment"/>
     </fragment>
 
 
