--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -150,7 +150,7 @@
             android:drawablePadding="20dp"
             android:drawableTint="@color/white"
             android:textColor="@color/white"
-            android:hint="@string/password"
+            android:hint="@string/password_confirm"
             android:inputType="textPassword" />
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -159,7 +159,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="12dp"
         android:layout_marginEnd="24dp"
         android:backgroundTint="@color/login_blue"
         android:text="@string/register"
