--- a/app/src/main/res/menu/navigation_drawer_menu.xml
+++ b/app/src/main/res/menu/navigation_drawer_menu.xml
@@ -6,13 +6,9 @@
     <group android:checkableBehavior="single">
 
         <item
-            android:id="@+id/nav_setting"
+            android:id="@+id/nav_settings"
             android:icon="@drawable/ic_baseline_settings"
             android:title="Setting"/>
-        <item
-            android:id="@+id/nav_about"
-            android:icon="@drawable/ic_baseline_info"
-            android:title="About"/>
         <item
             android:id="@+id/nav_logout"
             android:icon="@drawable/ic_baseline_logout"
