--- a/app/src/main/res/layout/fragment_book_details.xml
+++ b/app/src/main/res/layout/fragment_book_details.xml
@@ -7,25 +7,11 @@
     android:layout_height="match_parent"
     tools:context=".ui.main.BookDetailsFragment">
 
-    <com.google.android.material.appbar.MaterialToolbar
-        android:id="@+id/materialToolbar"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/nestedscrollview"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="?attr/colorPrimary"
-        app:layout_scrollFlags="scroll|enterAlways"
-        app:layout_collapseMode="pin"
-        />
-
-
-
     <androidx.core.widget.NestedScrollView
         android:id="@+id/nestedscrollview"
-        app:layout_constraintTop_toBottomOf="@id/materialToolbar"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         >
@@ -305,6 +291,7 @@
                     android:layout_height="wrap_content"
                     android:layout_below="@id/recyclerview_comments"
                     android:minHeight="48dp"
+                    android:imeOptions="flagNoExtractUi"
                     android:hint="@string/hint_comment"
                     android:inputType="textMultiLine"
                     android:layout_marginTop="8dp"
