--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,9 +1,24 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Base.Theme.Readify" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <item name="colorPrimary">#00009C</item>
+        <item name="colorPrimaryVariant">#4b62f0</item>
+        <item name="colorOnPrimary">#FFFFFF</item>
+
+        <item name="colorSecondary">#008F8F</item>
+        <item name="colorSecondaryVariant">#94CDDF</item>
+        <item name="colorOnSecondary">#FFFFFF</item>
+
+        <item name="colorTertiary">#EAEAEA</item>
+        <item name="colorOnTertiary">#000000</item>
+
+        <item name="backgroundColor">#FFFFFF</item>
+        <item name="colorOnBackground">#000000</item>
+
     </style>
 
-    <style name="Theme.Readify" parent="Base.Theme.Readify" />
+
+    ?attr/colorOnBackground
 </resources>
+
+
