--- a/app/src/main/res/drawable/ic_arrow_right.xml
+++ b/app/src/main/res/drawable/ic_arrow_right.xml
@@ -5,6 +5,6 @@
     android:viewportHeight="393">
   <path
       android:pathData="M153.2,42.2l-42.2,42.3 55.7,55.7 55.8,55.8 -55.8,55.8 -55.7,55.7 42.3,42.3 42.2,42.2 98,-98 98,-98 -98,-98 -98,-98 -42.3,42.2z"
-      android:fillColor="#000000"
+      android:fillColor="?attr/colorOnBackground"
       android:strokeColor="#00000000"/>
 </vector>
