--- a/app/src/main/res/drawable/ic_baseline_search_24.xml
+++ b/app/src/main/res/drawable/ic_baseline_search_24.xml
@@ -3,7 +3,7 @@
     <path android:fillColor="#00000000"
         android:pathData="M21,4C12.2,4 5,11.2 5,20s7.2,16 16,16s16,-7.2 16,-16S29.8,4 21,4z"
         android:strokeColor="#000000" android:strokeLineCap="round" android:strokeWidth="2"/>
-    <path android:fillColor="#00000000"
+    <path android:fillColor="?attr/colorOnBackground"
         android:pathData="M32.2,32.2l13.3,13.3"
         android:strokeColor="#000000" android:strokeWidth="4"/>
 </vector>
