--- a/app/src/main/res/drawable/ic_collections_bookmark_filled_black_24dp.xml
+++ b/app/src/main/res/drawable/ic_collections_bookmark_filled_black_24dp.xml
@@ -5,8 +5,8 @@
     android:viewportHeight="24">
   <path
       android:pathData="M4,6H2v14c0,1.1 0.9,2 2,2h14v-2H4V6z"
-      android:fillColor="#000000"/>
+      android:fillColor="?attr/colorOnBackground"/>
   <path
       android:pathData="M20,2L8,2c-1.1,0 -2,0.9 -2,2v12c0,1.1 0.9,2 2,2h12c1.1,0 2,-0.9 2,-2L22,4c0,-1.1 -0.9,-2 -2,-2zM20,12l-2.5,-1.5L15,12L15,4h5v8z"
-      android:fillColor="#000000"/>
+      android:fillColor="?attr/colorOnBackground"/>
 </vector>
