--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -20,9 +20,10 @@
             android:id="@+id/top_appbar_home"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/login_blue"
+            android:background="?attr/colorPrimary"
             android:minHeight="?attr/actionBarSize"
             app:title="@string/app_name"
+            app:titleTextColor="@color/white"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
