--- a/app/src/main/res/layout/bottom_search_filter.xml
+++ b/app/src/main/res/layout/bottom_search_filter.xml
@@ -69,7 +69,9 @@
                     style="@style/Widget.Material3.Chip.Filter"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:textColor="@color/black"
                     android:text="@string/textview_alphabetical_order_label"
+                    app:chipBackgroundColor="@color/bg_chip_state_list"
                     tools:checked="true" />
 
                 <com.google.android.material.chip.Chip
@@ -77,6 +79,8 @@
                     style="@style/Widget.Material3.Chip.Filter"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:textColor="@color/black"
+                    app:chipBackgroundColor="@color/bg_chip_state_list"
                     android:text="@string/textview_rating_order_label" />
 
             </com.google.android.material.chip.ChipGroup>
@@ -118,7 +122,9 @@
                 android:id="@+id/chip_genre_fantasy"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textColor="@color/black"
                 style="@style/Widget.Material3.Chip.Filter"
+                app:chipBackgroundColor="@color/bg_chip_state_list"
                 android:text="@string/chip_genre_fantasy"
                 />
 
@@ -126,8 +132,10 @@
                 android:id="@+id/chip_genre_action"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textColor="@color/black"
                 style="@style/Widget.Material3.Chip.Filter"
                 android:text="@string/chip_genre_action"
+                app:chipBackgroundColor="@color/bg_chip_state_list"
                 tools:checked="true"
                 />
 
@@ -135,7 +143,9 @@
                 android:id="@+id/chip_genre_biography"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textColor="@color/black"
                 style="@style/Widget.Material3.Chip.Filter"
+                app:chipBackgroundColor="@color/bg_chip_state_list"
                 android:text="@string/chip_genre_biography"
                 />
 
@@ -143,6 +153,8 @@
                 android:id="@+id/chip_genre_science_fiction"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textColor="@color/black"
+                app:chipBackgroundColor="@color/bg_chip_state_list"
                 style="@style/Widget.Material3.Chip.Filter"
                 android:text="@string/chip_genre_science_fiction"
                 />
@@ -151,6 +163,8 @@
                 android:id="@+id/chip_genre_thriller"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textColor="@color/black"
+                app:chipBackgroundColor="@color/bg_chip_state_list"
                 style="@style/Widget.Material3.Chip.Filter"
                 android:text="@string/chip_genre_thriller"
                 />
@@ -169,7 +183,7 @@
         <com.google.android.material.button.MaterialButton
             android:id="@+id/button_apply"
             style="@style/Widget.Material3.Button"
-            android:backgroundTint="@color/login_blue"
+            android:backgroundTint="?attr/colorPrimaryVariant"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
@@ -195,6 +209,7 @@
                 style="?attr/materialButtonOutlinedStyle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:textColor="?attr/colorOnBackground"
                 android:text="@string/button_reset" />
 
         </FrameLayout>
