--- a/app/src/main/res/layout/fragment_book_details.xml
+++ b/app/src/main/res/layout/fragment_book_details.xml
@@ -20,7 +20,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingBottom="64dp"
-            android:background="@color/light_gray_background"
+            android:background="?attr/backgroundColor"
             >
 
 
