--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -95,7 +95,7 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="24dp"
-        android:backgroundTint="@color/login_blue"
+        android:backgroundTint="?attr/colorPrimaryVariant"
         android:text="@string/login"
         android:textColor="@color/white"
         android:textSize="14sp"
