--- a/app/src/main/res/layout/fragment_tab_search_books.xml
+++ b/app/src/main/res/layout/fragment_tab_search_books.xml
@@ -49,6 +49,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
         app:icon="@drawable/ic_baseline_filter_list_24"
+        app:iconTint="?attr/colorSecondary"
         app:layout_constraintBottom_toBottomOf="@id/textinputlayout_search"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/textinputlayout_search"
